# openmpf-cpp-component-sdk

./: .gitignore  CMakeLists.txt  README.md
detection/api/: CMakeLists.txt
detection/api/include/: BlockingQueue.h  BoundedQueue.h  FeedForwardFrameFilter.h  FeedForwardFrameSkipper.h  FrameFilter.h  FrameListFilter.h  FrameSkipper.h  IntervalFrameFilter.h  IntervalFrameSkipper.h  KeyFrameFilter.h  MPFAsyncVideoCapture.h  MPFDetectionComponent.h  MPFDetectionException.h  MPFDetectionObjects.h  MPFImageReader.h  MPFInvalidPropertyException.h  MPFRotatedRect.h  MPFStreamingDetectionComponent.h  MPFVideoCapture.h  SPSCBoundedQueue.h  SeekStrategy.h  VideoSegmentToFramesConverter.h  detectionComponentUtils.h
detection/api/include/adapters/: MPFAudioAndVideoDetectionComponentAdapter.h  MPFAudioDetectionComponentAdapter.h  MPFGenericDetectionComponentAdapter.h  MPFImageAndVideoDetectionComponentAdapter.h  MPFImageDetectionComponentAdapter.h  MPFVideoDetectionComponentAdapter.h  MPFVideoFrameDataDetectionAdapter.h
detection/api/include/frame_transformers/: AffineFrameTransformer.h  BaseDecoratedTransformer.h  FrameCropper.h  FrameFlipper.h  FrameRotator.h  FrameTransformerFactory.h  IFrameTransformer.h  NoOpFrameTransformer.h  SearchRegion.h
detection/api/include/streaming/: MPFFrameReader.h
detection/api/src/: FeedForwardFrameFilter.cpp  FeedForwardFrameSkipper.cpp  FrameFilter.cpp  FrameListFilter.cpp  FrameSkipper.cpp  IntervalFrameFilter.cpp  IntervalFrameSkipper.cpp  KeyFrameFilter.cpp  MPFAsyncVideoCapture.cpp  MPFImageReader.cpp  MPFInvalidPropertyException.cpp  MPFRotatedRect.cpp  MPFVideoCapture.cpp  SeekStrategy.cpp  VideoSegmentToFramesConverter.cpp  detectionComponentUtils.cpp
detection/api/src/frame_transformers/: AffineFrameTransformer.cpp  BaseDecoratedTransformer.cpp  FrameCropper.cpp  FrameFlipper.cpp  FrameRotator.cpp  FrameTransformerFactory.cpp  NoOpFrameTransformer.cpp  SearchRegion.cpp
detection/api/src/streaming/: MPFFrameStore.cpp
detection/api/test/: CMakeLists.txt  NOTICE  test_affine_transformer.cpp  test_detection_api.cpp  test_rotation.cpp
detection/api/test/test_vids/: frame_skip_test.avi
detection/examples/: CMakeLists.txt  README.md
detection/examples/AudioOnlyComponent/: AudioOnly.cpp  AudioOnly.h  CMakeLists.txt  README.md  sample_audio_only_detector.cpp
detection/examples/AudioOnlyComponent/plugin-files/descriptor/: descriptor.json
detection/examples/FrameDataComponent/: CMakeLists.txt  README.md  VideoFrameDataComponent.cpp  VideoFrameDataComponent.h  sample_frame_data_component.cpp
detection/examples/FrameDataComponent/plugin-files/descriptor/: descriptor.json
detection/examples/GenericComponent/: CMakeLists.txt  GenericComponent.cpp  GenericComponent.h  README.md  sample_generic_detector.cpp
detection/examples/GenericComponent/plugin-files/descriptor/: descriptor.json
detection/examples/HelloWorldComponent/: CMakeLists.txt  HelloWorld.cpp  HelloWorld.h  README.md  StreamingHelloWorld.cpp  StreamingHelloWorld.h  sample_hello_world_detector.cpp
detection/examples/HelloWorldComponent/plugin-files/config/: Log4cxxConfig.xml
detection/examples/HelloWorldComponent/plugin-files/descriptor/: descriptor.json
detection/examples/ImageTransformerComponent/: CMakeLists.txt  ImageTransformerComponent.cpp  ImageTransformerComponent.h  README.md  sample_image_transformer.cpp
detection/examples/ImageTransformerComponent/plugin-files/descriptor/: descriptor.json
detection/examples/VideoCaptureComponent/: CMakeLists.txt  README.md  VideoCaptureComponent.cpp  VideoCaptureComponent.h  sample_video_capture_component.cpp
detection/examples/VideoCaptureComponent/plugin-files/descriptor/: descriptor.json
detection/testUtils/: CMakeLists.txt
detection/testUtils/include/: DetectionComparison.h  ImageGeneration.h  ReadDetectionsFromFile.h  VideoGeneration.h  WriteDetectionsToFile.h
detection/testUtils/src/: DetectionComparison.cpp  ImageGeneration.cpp  ReadDetectionsFromFile.cpp  VideoGeneration.cpp  WriteDetectionsToFile.cpp
detection/utils/: CMakeLists.txt
detection/utils/include/: BaseTracker.h  DlClassLoader.h  MPFSimpleConfigLoader.h  ModelsIniParser.h  RegionOverlapTracker.h  Utils.h
detection/utils/src/: BaseTracker.cpp  MPFSimpleConfigLoader.cpp  ModelsIniParser.cpp  RegionOverlapTracker.cpp  Utils.cpp
detection/utils/test/: CMakeLists.txt  test_models_ini_parser.cpp  test_parse_list_from_string.cpp
interface/: CMakeLists.txt
interface/include/: MPFComponentInterface.h
internal/: CMakeLists.txt
internal/include/: MPFBreaker.h
internal/src/: MPFBreaker.cpp
mpf-cmake-helpers/: CMakeLists.txt  CopySharedLibDependencies.cmake  MpfHelpers.cmake  mpfCMakeHelpersConfig.cmake
